--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fastify": "^4.26.1",
     "fastify-cli": "^6.3.0",
     "fastify-plugin": "^4.0.0",
+    "fastify-sqlite-typed": "^0.1.1",
     "jest": "^29.7.0"
   },
   "devDependencies": {
